# yad2gt

./: .gitignore  README.md  items.csv  items.py  main.py  main.spec  pyproject.toml  win.py
assets/: items.csv
tests/: items_test.py
